--- a/car/templates/view_about.html
+++ b/car/templates/view_about.html
@@ -1,113 +1,77 @@
 {% extends 'navigation.html' %}
 {% load static %}
-{% block body %}
+{% block content %}
 
-{% load static %}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
+    .content-container {
+        background-color: #26272E; /* Set background color for content block */
+        padding: 20px; /* Add some padding for better spacing */
+        border-radius: 8px; /* Optional: for rounded corners */
+    }
 
-body
- {
-  background:url({% static 'images/bmw13.jpg' %});
-  max-width:100%;
-  background-repeat:no-repeat;
+    form {
+        margin: 40px;
+        font-weight: bold;
+        color: white;
+    }
 
-  background-position:center;
+    h2 {
+        margin-left: 100px;
+        padding: 8px;
+        color: white; 
+        font-family: 'Poppins', sans-serif; 
+        font-size: 45px;
+    }
 
-  }
+    p {
+        margin-top: -40px;
+        margin-left:90px;
+        color: white; /* Changed description color to white */
+        font-family: 'Poppins', sans-serif; /* Changed font to Poppins */
+    }
 
-  form{
-  margin:40px;
-  font-weight:bold;
-  color:white;
-  }
+    .image-row {
+        display: flex; /* Use Flexbox for horizontal layout */
+        justify-content: space-around; /* Center images */
+        margin-bottom: 10%; /* Spacing at the bottom */
+    }
 
-div.transparentbox
+    .image-container {
+        margin: 0 10px; /* Add spacing between images */
+    }
 
-  {
-
-  width:30%;
-
-  height:250px;
-  border-radius:8px;
-  margin:15% 30% 40% 40%;
-  background-color:black;
-
-  border:1px solid;
-
-  border-color:#CD853F;
-
-  opacity:0.6;
-
-  filter:alpha(opacity=50);
-
-  }
-
-  div.transparentbox1
-
-  {
-
-  opacity:0.6;
-
-  filter:alpha(opacity=60);
-
-  }
-
-div.transparentbox lable
-
-  {
-  margin-top:10%;
-  margin-left:31%;
-  font-weight:bold;
-  font-Size:60px;
-  font-color:white;
-  font-family : 'Monotype Corsiva' ;
-  color : white;
-  font-weight : bold;
-  text-align:center;
-  }
-#circle {
-    background: green;
-    border-radius: 50%;
-    width: 150px;
-    height: 150px;
-}
-
-#halfCircleBottom{
-     height:75px;
-     width:150px;
-     border-radius: 0 0 90px 90px;
-     background:darkslategrey;
-     margin:0px;
-}
-
-#halfCircle{
-     height:75px;
-     width:150px;
-     border-radius: 90px 90px 0 0;
-     background:green;
-     margin:0px;
-}
-img{
-float:center;
-}
+    .image-container img {
+        width: 400px; /* Set width */
+        height: 300px; /* Set height */
+        border-radius: 8px; /* Rounded corners */
+        border: 2px solid #f8f8f8; 
+        display: block; 
+        margin-top:20px;
+    }
 </style>
-<div class="container-fluid" style="background-color:white">
-  <h2 style="margin-left:180px;padding:8px;color:red;">{{data.title}}</h2>
 
-</div><div class="container">
-
-  <p style="color:black;">{{data.des}}</p>
-  <div class="row" style="margin-bottom:10%">
-    <div class="col-md-6">
-          <img src="{{data.img1.url}}" style="width:400px;height:400px;border-radius:50%;margin-left:50px">
-    </div>
-    <div class="col-md-6">
-            <img src="{{data.img2.url}}" style="width:400px;height:400px;border-radius:50%;margin-left:80px">
-    </div>
-  </div>
+<div class="container-fluid">
+    <h2>{{ data.title }}</h2>
 </div>
+<div class="container content-container">
+    <p>Welcome to Carvista, your premier destination for finding the perfect car. Our passion for 
+      automobiles drives us to provide an unparalleled car buying experience, where quality meets 
+      convenience.
 
-
+      At Carvista, we believe that purchasing a car should be an exciting and stress-free journey. Our 
+      extensive inventory features a wide range of vehicles, from sleek sedans to robust SUVs, ensuring 
+      that we have something for everyone. Each car in our showroom is carefully selected and inspected to 
+      meet our high standards of quality and performance.
+      
+    </p>
+    <div class="image-row">
+        <div class="image-container">
+            <img src="{{ data.img1.url }}">
+        </div>
+        <div class="image-container">
+            <img src="{{ data.img2.url }}">
+        </div>
+    </div>
+</div>
 
 {% endblock %}
